<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_plugins</name>
  <version>0.1.0</version>
  <description>A set of non-standard ROS2 Gazebo plugins relevant to space robotics</description>
  <maintainer email="simonhonigmann@gmail.com">Simon Honigmann</maintainer>
  <author>Simon Honigmann</author>
  <license>TBD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/../../lib"/>
  </export>
</package>
